--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,5 +61,62 @@ header{
     top: 1px;
     background-color: rgb(240, 239, 239);
 }
+.social{
+    display: flex;
+    justify-content: flex-end;
+}
+.social a{
+    border: 1px solid #fff;
+    text-decoration: none;
+    color: #fff; 
+    border-radius: 50%;
+    margin-left: 15px;
+
+}
+.social a span{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+}
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
+
+@media screen and (max-width: 375px){
+    body{
+        background-image: url("../images/bg-mobile.svg");
+        background-repeat: no-repeat;
+    }
+    header{
+        padding: 30px 0px 50px 0px;
+    }
+    .logo{
+        width: 45%;
+    }
+    .container{
+        width: 80%;
+    }
+    .mockup{
+        width: 100%;
+    }
+    .mockup img{
+        width: 100%;
+    }
+    .info{
+        width: 100%;
+        text-align: center;
+        margin: 30px 0px 30px 0px;
+    }
+    .info h1{
+        font-size: 25px;
+    }
+    .info p{
+        font-size: 17px;
+    }
+    .social{
+        justify-content: center;
+        margin-bottom: 20px;
+    }
+
+}
